Closed
Bug 816176
Opened 13 years ago
Closed 13 years ago
Move WebGLShaderPrecisionFormat to a separate header
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: bjacob, Assigned: sawrubh)
Details
(Whiteboard: [mentor=bjacob][lang=c++] webgl-next)
Attachments
(2 files)
|
3.97 KB,
patch
|
bjacob
:
review+
|
Details | Diff | Splinter Review |
|
4.01 KB,
patch
|
sawrubh
:
review+
|
Details | Diff | Splinter Review |
This one should be easier than other "Move WebGLFoo into separate files" bugs, because this class is particularly small.
Currently it lives in WebGLContext.h. Move it to a new header, WebGLShaderPrecisionFormat.h, which will have to include WebGLObjectModel.h.
If you're bored, look at other "Move WebGLFoo into separate files" bugs --- I can file more as existing ones get closed --- but I do appreciate work on all the boring little things ;-)
| Assignee | ||
Comment 1•13 years ago
|
||
Assignee: nobody → saurabhanandiit
Status: NEW → ASSIGNED
Attachment #687366 -
Flags: review?(bjacob)
| Reporter | ||
Comment 2•13 years ago
|
||
Comment on attachment 687366 [details] [diff] [review]
Patch v1
Review of attachment 687366 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks!
For a bigger challenge, do you feel like doing WebGLShader (Bug 816181) next?
Attachment #687366 -
Flags: review?(bjacob) → review+
| Reporter | ||
Comment 3•13 years ago
|
||
I get this compile error:
/hack/mozilla-inbound/content/canvas/src/WebGLContextGL.cpp: In member function ‘JS::Value mozilla::WebGLContext::GetParameter(JSContext*, WebGLenum, mozilla::ErrorResult&)’:
/hack/mozilla-inbound/content/canvas/src/WebGLContextGL.cpp:1888:39: error: ‘MINVALUE_GL_MAX_RENDERBUFFER_SIZE’ was not declared in this scope
| Assignee | ||
Comment 4•13 years ago
|
||
It was because the WebGLContext.h is under constant flux with the recent "Move/Split Foo into Bar" bugs. Hence when I submitted this patch for review, it was building fine with the code I had (and I had most probably pulled the latest changes and tested with that) however I think some other patch must have landed in the meanwhile which has touched the same files. In fact when I pulled again and then tried to apply this patch, one HUNK failed to apply.
Possible solutions :
1) I repost the un-bitrotted patch and then we land it *quickly* before anyone else touches it again.
2) We can either have a single person working on these or maybe make people work sequentially on these type of bugs.
Thanks.
| Assignee | ||
Comment 5•13 years ago
|
||
This is the un-bitrotted patch.
Note : I am setting the r+ myself because there was is no change from Patch v1 and Patch v1 had bjacob's r+.
Attachment #687366 -
Attachment is obsolete: true
Attachment #687503 -
Flags: review+
Comment 6•13 years ago
|
||
| Reporter | ||
Comment 7•13 years ago
|
||
Thanks for rebasing & landing. Such bitrotting happens frequently, no need to serialize work. Next time I guess I'll just rebase and land.
Comment 8•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
| Reporter | ||
Comment 9•13 years ago
|
||
Don't obsolete the patch that I reviewed. Otherwise it looks like you reviewed your own patch :)
| Reporter | ||
Updated•13 years ago
|
Attachment #687366 -
Attachment is obsolete: false
You need to log in
before you can comment on or make changes to this bug.
Description
•