Bug 816176 - Move WebGLShaderPrecisionFormat to a separate header; r=bjacob